objects/AR_Client__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the client active</description>
        <inlineHelpText>Is the client active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <businessOwnerUser>mrinal.konda@autorabit.com.esdevorg</businessOwnerUser>
        <description>Email of the company</description>
        <label>Company Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_Of_Client__c</fullName>
        <label>Name Of Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product Subscribed to</description>
        <label>Product</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR_Client</label>
    <nameField>
        <label>AR_Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR_Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>